<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Tourist Guide</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="destination">Tourist Sites</string>
    <string name="reservation">Reservations</string>
    <string name="experience">Your Experience</string>
    <string name="help">Help &amp; Support</string>
    <string name="about">About Us</string>

    <!-- destination strings -->
    <string name="toursites">TOURIST SITES</string>
    <string name="wildlife">Wildlife Centers</string>
    <string name="forests">Forests</string>
    <string name="water">Water Bodies</string>
    <string name="recreation">Recreation centres</string>
    <string name="markets">Market Centres</string>
    <string name="museums">Museums</string>
    <string name="others">Other Sites</string>

    <!-- Location  strings -->
    <string name="locate">LOCATION</string>
    <string name="map">Areal Map</string>
    <string name="hotel">Accomodation</string>
    <string name="touristsites">Tourist Sites</string>
    <string name="transport">Transport Facilities</string>
    <string name="track">Objects Tracking</string>
    <string name="other">Other Services</string>

    <!-- reservations -->
    <string name="reserve">RESERVATIONS</string>
    <string name="booking">Other Bookings</string>

    <!-- experience strings -->
    <string name="yourexperience">YOUR TOUR EXPERIENCE</string>
    <string name="sign">Sign in</string>
    <string name="log">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="reg">Register</string>
    <string name="email">Email</string>
    <string name="country">Country from</string>
    <string name="fpassword">Forgot Password ?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="social_media">Social Media</string>

    <!-- help & support -->
    <string name="support">HELP &amp; SUPPORT</string>
    <string name="copyright">© Dexta 2016</string>

    <!-- About us -->
    <string name="abt">ABOUT US</string>
    <string name="email_us">email us</string>

    <!-- action bar strings -->
    <string name="action_settings">Settings</string>
    <string name="action_Change_view">change view</string>
    <string name="action_change_color">change color</string>
    <string name="title_activity_ilocation">Map</string>
    <!-- maps activity -->
    <string name="title_activity_maps">Map</string>

    <!-- navigation drawer strings -->

    <string name="opendrawer">open</string>
    <string name="closedrawer">close</string>
    <string name="title_activity_imobile_tourist_guide">IMobileTouristGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_itourist_display">ITouristDisplay</string>
    <string name="title_activity_exp_dashboard">Exp_dashboard</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="title_activity_object__tracking">Object_Tracking</string>
    <string name="title_activity_object_tracking">ObjectTracking</string>

</resources>
