<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >



                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/wildlifec"
                        android:id="@+id/location"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/wildlife"
                        android:id="@+id/btwcenter"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view1"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/bujagali"
                        android:id="@+id/destination"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/water"
                        android:id="@+id/btwbodies"

                        />

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view2"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/market3"
                        android:id="@+id/reservation"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/markets"
                        android:id="@+id/btmarket"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view3"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/mus3"
                        android:id="@+id/ivmuseum"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/museums"
                        android:id="@+id/btmuseums"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view4"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/recreation3"
                        android:id="@+id/recreation"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/recreation"
                        android:id="@+id/btrecreation"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view5"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/others"
                        android:id="@+id/about"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/others"
                        android:id="@+id/btothers"

                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
