<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView
                style="@style/cardview"
                android:id="@+id/card_view5"
                >
                <com.nkawooya.finalprojecttransfer.RoundedImageView

                    style="@style/cardimage"
                    android:src="@drawable/recreation3"
                    android:id="@+id/about"
                    />
                <Button
                    style="@style/cardButton"
                    android:text="@string/touristsites"
                    android:id="@+id/btothers"

                    />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/cardview"
                android:id="@+id/card_view"
                >
                <com.nkawooya.finalprojecttransfer.RoundedImageView

                    style="@style/cardimage"
                    android:src="@drawable/res3"
                    android:id="@+id/accomodation"
                    />
                <Button
                    style="@style/cardButton"
                    android:text="@string/hotel"
                    android:id="@+id/btaccomodation"

                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/cardview"
                android:id="@+id/card_view1"
                >
                <com.nkawooya.finalprojecttransfer.RoundedImageView

                    style="@style/cardimage"
                    android:src="@drawable/index1"
                    android:id="@+id/destination"
                    />
                <Button
                    style="@style/cardButton"
                    android:text="@string/transport"
                    android:id="@+id/bttoursites"

                    />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cardview"
                android:id="@+id/card_view4"
                >
                <com.nkawooya.finalprojecttransfer.RoundedImageView

                    style="@style/cardimage"
                    android:src="@drawable/hel3"
                    android:id="@+id/recreation"
                    />
                <Button
                    style="@style/cardButton"
                    android:text="@string/booking"
                    android:id="@+id/btbookings"

                    />
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>