<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textSize="35dip"
        android:layout_margin="10dip"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center"
        android:id="@+id/textView3" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                </android.support.design.widget.TextInputLayout>
            <EditText style="@style/edittext"
                android:hint="Name"
                android:id="@+id/Rname"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <EditText style="@style/edittext"
                    android:hint="Username"
                    android:id="@+id/Rusername"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <EditText style="@style/edittext"
                    android:hint="@string/email"
                    android:id="@+id/Remail"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <EditText style="@style/edittext"
                    android:hint="@string/country"
                    android:id="@+id/Rcountry"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <EditText style="@style/edittext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:id="@+id/Rpassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <EditText style="@style/edittext"
                    android:hint="@string/confirm"
                    android:inputType="textPassword"
                    android:id="@+id/Rcpassword"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dip"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:text="Continue"
                    android:id="@+id/cont"
                    android:textAllCaps="false"
                    android:textSize="16dip"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>