<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Relative">

<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >



                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/exp1"
                        android:id="@+id/location"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/location"
                        android:id="@+id/btlocation"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view1"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/index1"
                        android:id="@+id/destination"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/destination"
                        android:id="@+id/bttoursites"

                        />

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view2"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/res"
                        android:id="@+id/reservation"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/reservation"
                        android:id="@+id/btreservation"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view3"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/exp2"
                        android:id="@+id/experience"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/experience"
                        android:id="@+id/btexperience"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view4"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/hel3"
                        android:id="@+id/help"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/help"
                        android:id="@+id/bthelp"

                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:id="@+id/card_view5"
                    >
                    <com.nkawooya.finalprojecttransfer.RoundedImageView

                        style="@style/cardimage"
                        android:src="@drawable/about"
                        android:id="@+id/about"
                        />
                    <Button
                        style="@style/cardButton"
                        android:text="@string/about"
                        android:id="@+id/btabout"

                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/List_view"
        android:background="#ccc"/>
+
</android.support.v4.widget.DrawerLayout>