<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign"
                        android:textSize="35dip"
                        android:layout_marginTop="10dip"
                        android:textColor="#000"
                        android:layout_gravity="center"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="50dip">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                            >


                                    <EditText style="@style/edittext"
                                        android:hint="@string/email"
                                        android:id="@+id/Lemail"
                                        android:inputType="textWebEmailAddress"/>
                            </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">
                        <EditText style="@style/edittext"
                            android:hint="@string/password"
                            android:id="@+id/Lpassword"
                            android:inputType="textPassword"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/login"
                            android:text="@string/log"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:layout_margin="10dip"
                            android:gravity="center"
                            android:ems="10"
                            android:onClick="onLoginClick" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create"
                            android:textSize="20dip"
                            android:id="@+id/Lcreate"
                            android:textAllCaps="false"
                            android:ems="10"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:onClick="onSigninClick" />

                    </LinearLayout>





                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log"
                        android:textSize="35dip"
                        android:layout_margin="10dip"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:layout_gravity="center"
                         />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="50dip">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">


                            <EditText style="@style/edittext"
                                android:hint="@string/username"
                                android:id="@+id/Ausername"
                                android:inputType="text"/>
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">


                            <EditText style="@style/edittext"
                                android:hint="@string/email"
                                android:id="@+id/Aemail"
                                android:inputType="textWebEmailAddress"/>
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">
                            <EditText style="@style/edittext"
                                android:hint="@string/password"
                                android:id="@+id/Apassword"
                                android:inputType="textPassword"/>
                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btlogin"
                            android:text="@string/log"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:layout_margin="10dip"
                            android:gravity="center"
                            android:ems="10"
                            android:onClick="onAdminLog" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create"
                            android:textSize="20dip"
                            android:textAllCaps="false"
                            android:id="@+id/btcreate"
                            android:ems="10"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:onClick="onAdminRegister"
                            android:nestedScrollingEnabled="true" />

                    </LinearLayout>

                </LinearLayout>


            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>